# agentic-cookiecutter

./: .gitignore  CLAUDE.md  UBIQUITOUS_LANGUAGE.md  cookiecutter.json  pyproject.toml
.claude/: hooks.json  settings.json  skills
docs/phase0/: agentic-workflow-tracker.md  phase0-analysis.md  phase0-research-catalogue.md  phase1-design-inputs.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_generation.py  test_hooks.py
{{cookiecutter.project_slug}}/: ARCHITECTURE.md  CLAUDE.md  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/: hooks.json  settings.json
{{cookiecutter.project_slug}}/.claude/commands/: commit-push-pr.md
{{cookiecutter.project_slug}}/.claude/skills/compound/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/plan/: SKILL.md
{{cookiecutter.project_slug}}/.claude/skills/review/: SKILL.md  eval.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: instrumentation.md
{{cookiecutter.project_slug}}/docs/decisions/: 0000-template.md
{{cookiecutter.project_slug}}/docs/learnings/: learnings.md
{{cookiecutter.project_slug}}/project/: instrumentation.md  mermaid-style-guide.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/stories/: template.md
{{cookiecutter.project_slug}}/tests/: conftest.py
