[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for Python projects using an agentic coding workflow with Claude Code."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "T20",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
