[project]
name = "agentic-cookiecutter"
version = "0.1.0"
description = "Cookiecutter template for Python projects using an agentic coding workflow with Claude Code."
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "commitizen>=4.1",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "A",
    "C4",
    "T20",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version",
]
allowed_prefixes = ["Merge", "Revert", "Initial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
